Archive2/1c/b20d178f0779f5/output
main.cpp:23:27: warning: type qualifiers ignored on function return type [-Wignored-qualifiers]
     const int get_value() const
                           ^
main.cpp:23:15: error: conflicting return type specified for ‘virtual const int Impl::get_value() const’
     const int get_value() const
               ^
main.cpp:12:17: error:   overriding ‘virtual int A::get_value() const’
     virtual int get_value() const = 0;
                 ^
